<resources>
    <string name="app_name">RestoSearch</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="image_resto">Restaurant Image</string>
    <string name="image_food">Food Image</string>
    <string name="action_account">Account</string>
    <string name="action_sort">Sort</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_ascending">Ascending</string>
    <string name="action_descending">Descending</string>
    <string name="action_search">Search</string>
    <string name="cant_connect">No Internet connection found. Check your connection or try again.</string>
    <string name="button_map_expand">Expand</string>

    <string name="parse_app_id">NALlTP5R8YRZ6Ewds2gfefhZW3TjVPcZMqfYmfSO</string>
    <string name="parse_client_key">K8RMJ45CPEu21EjYaoVpC4d6t268lmosOBzgYnLZ</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="login_facebook">Login via Facebook</string>
    <string name="logout">Log out</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_retype_password">Confirm Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration">Create an Account</string>
    <string name="facebook_app_id">456887777830411</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login_activity_manually">Sign in</string>
</resources>
