<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ui.activity.RestaurantActivity">

    <item android:id="@+id/action_saveResto" android:icon="@drawable/ic_save"
        android:visible="false" app:showAsAction="ifRoom" android:title="@string/action_save"/>

    <item android:id="@+id/action_editResto" android:icon="@drawable/ic_mode_edit"
        android:visible="false" app:showAsAction="ifRoom" android:title="@string/action_edit"/>

    <item android:id="@+id/action_search" android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/action_search"/>

    <item android:id="@+id/action_sort" android:icon="@drawable/ic_sort_ascending"
        app:showAsAction="ifRoom" android:title="@string/action_sort"/>

    <item android:id="@+id/action_account" android:title="@string/action_account"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
